--- a/index.html
+++ b/index.html
@@ -191,6 +191,9 @@
           <div class="col-12 col-md-4">
             <img src="images/Outside/images6.jpg" class="img-fluid rounded gallery-image" alt="Imagen 5" style="width: 100%; height: fit-content;" >
           </div>
+          <div class="col-12 col-md-4">
+            <img src="images/Outside/image4.jpg" class="img-fluid rounded gallery-image" alt="Imagen 5" style="width: 100%; height: fit-content;" >
+          </div>
         </div>
       </div>
     </section>
