--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a class="nav-link" href="#photos">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#reviews">Opinions</a>
+              <a class="nav-link" href="#reviews"></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#reservation">Reservations</a>
