--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <!--   <p class="d-inline pe-5"><img class="icon me-2" src="images/Icons/poolIcon.png">Alberca</p> -->
             <!--  <p class="d-inline pe-5"><img class="icon me-2" src="images/Icons/bathIcon.png">Jacuzzi</p> -->
             <p class="d-inline pe-3"><img class="icon me-2" src="images/Icons/wifiIcon.png">Wi-Fi</p>
-            <p class="d-inline pe-3"><img class="icon me-2" style="height: 600%;" src="images/Icons/cctvIcon.png">Wi-Fi</p>
+            <p class="d-inline pe-3"><img class="icon me-2" style="height: 600%;" src="images/Icons/cctvIcon.png">CCTV</p>
             
             </div>
 
