--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="container mb-4">
         
         <div class="text-center">
-          <h4 class="display-4 pb-3 fw-bold">Who Are we?</h4>
+          <!--<h4 class="display-4 pb-3 fw-bold">Who Are we?</h4>-->
         </div>
 
         <div class="row">
