--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <img src="images/Inside/images7.jpg" class="img-fluid rounded gallery-image" alt="Imagen 4">
           </div>
           <div class="col-12 col-md-4">
-            <img src="images/Outside/images6.jpg" class="img-fluid rounded gallery-image" alt="Imagen 5" style="width: 100%; height: fit-content;" >
+          <!---  <img src="images/Outside/images6.jpg" class="img-fluid rounded gallery-image" alt="Imagen 5" style="width: 100%; height: fit-content;" > ---->
           </div>
            <div class="col-12 col-md-4">
             <img src="images/Outside/image4.jpg" class="img-fluid rounded gallery-image" alt="Imagen 5" style="width: 100%; height: fit-content;" >
