--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="text-center">
 
           <br>
-          <!--<h4 class="display-4 pb-3 fw-bold">Who Are we?</h4>-->
+          <h4 class="display-4 pb-3 fw-bold"></h4>
         </div>
 
         <div class="row">
