--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <img src="images/Logos/logos.png" class="mb-3 footerLogo" alt="logo" width="40%" height="35%">
 
             <p>
-              At <span>name</span>, we offer much more than a stay: we provide a unique space in the heart of the Guadalupe Valley so you can live unforgettable moments. Our house can comfortably accommodate families, couples and groups of friends.
+              At <span>Casa Clarice</span>, we offer much more than a stay: we provide a unique space in the heart of the Guadalupe Valley so you can live unforgettable moments. Our house can comfortably accommodate families, couples and groups of friends.
             </p>
           </div>
           <!-- Column 1 -->
