--- a/index.html
+++ b/index.html
@@ -167,6 +167,30 @@
     <!-- Photo Gallery Section Start -->
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!---old gallary here--->
+    <section id="photos" class="photos position-relative py-5 bg-white"> 
+<!---new-->
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -193,6 +217,7 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+<!---end of new--->
 
 
 
@@ -202,20 +227,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-    <!---old gallary here--->
-    <section id="photos" class="photos position-relative py-5 bg-white">
+      
       <img src="images/Decorative/dots.svg" class="decoration-dots position-absolute d-none d-xxl-block">
       <img src="images/Decorative/decorative6.png" class="decoration-image4 position-absolute d-none d-xxl-block">
 
