--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
   
       
 <!---new-->
+    <section id="photos" class="photos position-relative py-5 bg-white"> 
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -218,6 +219,8 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+        </section> 
 <!---end of new--->
 
 
